--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,3 +66,5 @@ flutter:
     #
     # For details regarding fonts from package dependencies,
     # see https://flutter.dev/custom-fonts/#from-packages
+    assets:
+        - assets/images/home.jpg
