--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,14 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+    fonts:
+        - family: Montserrat
+          fonts:
+              - asset: assets/fonts/Montserrat-Regular.ttf
+              - asset: assets/fonts/Montserrat-SemiBold.ttf
+              - asset: assets/fonts/Montserrat-Thin.ttf
+              - asset: assets/fonts/Montserrat-Light.ttf
+              - asset: assets/fonts/Montserrat-Medium.ttf
     # The following line ensures that the Material Icons font is
     # included with your application, so that you can use the icons in
     # the material Icons class.
